--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "API de Noticias, Consumida por um SPA em REACT.",
   "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "server": "nodemon server"
   },
   "keywords": [],
   "author": "Bruno Alves",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
